# python-msx-swagger

./: MANIFEST.in  README.md  setup.cfg  setup.py
src/msxswagger/: __init__.py  msxswagger.py
src/msxswagger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/msxswagger/static/: swagger-ui-standalone-preset.js
src/msxswagger/templates/: index.html  secure.html
