[metadata]
name = ananasta
version = 0.5.0
author = Cisco MSX
author_email = ananasta@cisco.com
description = Sample package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src